# FIdelity-ONNX

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  axes_parser.py  base_graph.onnx  bit_flip_custom.cpp  cnn_inference.py  debug_model.py  debug_model_fp16.py  demo_inference.py  docker_setup.sh  experiment.sh  fault_injection_results.csv  fault_injection_results.csv:Zone.Identifier  fault_injection_with_matmul_results.csv  fi_validation.py  fi_validationfp16.py  find_op_pairs.py  find_op_pairsfp16.py  fp16_bitflip_results.csv  fp16_comprehensive_results.txt  graph.py  inject_ops.py  injection_graph.onnx  input16_weight16.csv  input_weight.csv  llm_inference.py  merged_graph.onnx  onnx_inference.py  onnx_inference_accelerated.py  onnx_inference_old.py  onnx_multigpu_inference.py  onnx_optimized_inference.py  parallelized_inject_onnx_transformer.py  parser.py  parser_fp16.py  pytest.ini  requirements.txt  (+44 more)
configs/: llama_7b.json
deprecated/: decoder_llama.py  find_op_pairs.py  injection.py  llama_inference.py  old_graph.py  onnx_inference.py  onnx_inference_eval.py  validation_inference.py
docs/: README.md  cnn_inference.md  graph.md  inject_ops.md  llm_inference.md  quant.md
fault_injection_results/: fault_metrics.csv
inject_utils/: layers.py  utils.py
input_llm/: down_proj_decoder-merge-20.json  gate_proj_decoder-merge-20.json  k_proj_decoder-merge-20.json  q_proj_decoder-merge-20.json  up_proj_decoder-merge-20.json  v_proj_decoder-merge-20.json
int8/: export-onnx.py  fake_quant.py  modeling_llama.py
int8/smoothquant/: fake_quant.py
llama/: decoder.py  libonnxruntime.so.1:Zone.Identifier  logits_process.py  memory_pool.py  tokenizer.py  utils.py
onnx-bitflip/: CMakeLists.txt  build.sh
onnx-bitflip/include/: bit_flip_cuda.h  bit_flip_op.h
onnx-bitflip/python/: __init__.py  bit_flip_module.py
onnx-bitflip/src/: bit_flip_cuda.cu  bit_flip_op.cc
onnx-cuda-bitflip/: CMakeLists.txt  build.sh  setup.py
onnx-cuda-bitflip/include/: bit_flip_cuda.h  bit_flip_op.h
onnx-cuda-bitflip/python/: bit_flip_module.py  test_bit_flip.py
onnx-cuda-bitflip/src/: bit_flip_cuda.cu  register_custom_ops.cc
results_fault_injection/: results.csv
scales/: transformer_scales.pt:Zone.Identifier  transformer_scales.ptZone.Identifier
tests/: README.md  conftest.py  fi_validationfp16.py  test16.py  test_cnn_quantized_injection_wiring.py  test_conv_mask16.py  test_decoder_injected.py  test_fc_mask16.py  test_fp16_bitflip.py  test_fp16_bitflip_cuda.py  test_graph_gs.py  test_mask16.py  test_quantized_injection.py  test_random_bitflip.py  test_random_fp16_injection.py  test_random_injection.py
tests/cuda/: test_decoder_injected.py  test_fp16_bitflip_cuda.py
tests/integration/: test_cnn_fault_model_wiring.py  test_cnn_inference_runtime_requirements.py  test_custom_op_libraries.py  test_fault_model_matrix.py  test_graph_structure.py  test_random_injection.py
tests/legacy/: four_d_input16_experiment.py  random_bitflip_manual.py
tests/unit/: test_fp16_bitflip_structure.py  test_quantized_injection.py
tools/: convert-fp32-to-fp16.py  export-onnx.py  requirements.txt
